--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,8 @@ table {
   padding: 1px 15px;
 }
 
+
+
 .formBorder {
   border: 2px black solid;
   padding: 10px  15px;
@@ -61,4 +63,33 @@ input {
 .buttonAlignment {
   text-align: right;
   margin-top: 20px;
+}
+
+.links {
+  text-align: center;
+}
+
+.sub-nav-text {
+  font-size: 30px;
+  font-weight: 300;
+}
+
+.global-nav-text {
+  font-size: 35px;
+  font-weight: 300;
+}
+
+.green-playing-btn {
+  background-color: green;
+  color: white;
+}
+
+.red-not-playing-btn {
+  background-color: red;
+  color: white;
+}
+
+.yellow-undecided-btn {
+  background-color: yellow;
+  color: black;
 }
